[package]
name = "bulletproofs-bs257"
# Before doing a release:
# - update version field 
# - update html_root_url
# - ensure yoloproofs was disabled in an atomic (revertable) commit
# - update CHANGELOG
version = "2.0.0"
authors = ["Cathie Yun <cathieyun@gmail.com>", 
           "Henry de Valence <hdevalence@hdevalence.ca>",
           "Oleg Andreev <oleganza@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/dalek-cryptography/bulletproofs"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "ristretto", "zero-knowledge", "bulletproofs"]
description = "A pure-Rust implementation of Bulletproofs using Ristretto"
edition = "2018"

[dependencies]
subtle = { version = "2", default-features = false }
sha3 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["alloc"] }
rand = { version = "0.8", optional = true }
byteorder = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = { version = "1", default-features = false }
thiserror = { version = "1", optional = true }
merlin = { version = "3", default-features = false }
clear_on_drop = { version = "0.2", features = ["no_cc"] }
rand_chacha = "0.3"

[dependencies.ark-ec]
version = '^0.3.0'
default-features = false

[dependencies.ark-ff]
version = '^0.3.0'
default-features = false
features = ['asm']

[dependencies.ark-std]
version = '^0.3.0'
default-features = false

[dependencies.ark-serialize]
version = '^0.3.0'
default-features = false
features = ["derive"]

[dependencies.ark-algebra-test-templates]
version = '^0.3.0'
default-features = false
features = ["std"]

[dev-dependencies]
hex = "0.3"
criterion = "0.3"
rand_chacha = "0.3"

[features]
default = ["std", "yoloproofs"]
yoloproofs = []
std = ["rand", "rand/std", "thiserror"]
parallel = ["ark-ec/parallel", "ark-ff/parallel", "ark-std/parallel"]

[[test]]
name = "r1cs"
required-features = ["yoloproofs"]

[[bench]]
name = "generators"
harness = false

[[bench]]
name = "r1cs"
harness = false
required-features = ["yoloproofs"]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

[patch.crates-io]
ark-ec = { git = "https://github.com/FindoraNetwork/ark-algebra" }
ark-ff = { git = "https://github.com/FindoraNetwork/ark-algebra" }
ark-serialize = { git = "https://github.com/FindoraNetwork/ark-algebra" }
ark-algebra-test-templates = { git = "https://github.com/FindoraNetwork/ark-algebra" }
ark-std = { git = "https://github.com/FindoraNetwork/ark-std" }
